--- a/Ayarlar/App.config
+++ b/Ayarlar/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Ayarlar.Ayarlar" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Ayarlar.Giris" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,20 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <userSettings>
+        <Ayarlar.Ayarlar>
+            <setting name="Chekbox1" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Chekbox2" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="textDeger1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="textDeger2" serializeAs="String">
+                <value />
+            </setting>
+        </Ayarlar.Ayarlar>
         <Ayarlar.Giris>
             <setting name="KullaniciAdi" serializeAs="String">
                 <value />
