--- a/OgrenciKayit/OgrenciKayit.csproj
+++ b/OgrenciKayit/OgrenciKayit.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73C36CA8-FC86-4CBA-9A05-09E4D04A04BF}</ProjectGuid>
+    <ProjectGuid>{B0892D3E-34A6-4E24-BECD-6221B88AE209}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Ayarlar</RootNamespace>
-    <AssemblyName>Ayarlar</AssemblyName>
+    <RootNamespace>OgrenciKayit</RootNamespace>
+    <AssemblyName>OgrenciKayit</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,35 +46,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ayarlar.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Ayarlar.settings</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Giris.Designer.cs">
+    <Compile Include="HesapAyarlari.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Giris.settings</DependentUpon>
+      <DependentUpon>HesapAyarlari.settings</DependentUpon>
+    </Compile>
+    <Compile Include="OgrenciAyarlari.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>OgrenciAyarlari.settings</DependentUpon>
+    </Compile>
+    <Compile Include="OgrenciKaydi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrenciKaydi.Designer.cs">
+      <DependentUpon>OgrenciKaydi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OgrenciListele.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrenciListele.Designer.cs">
+      <DependentUpon>OgrenciListele.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="OgrenciKaydi.resx">
+      <DependentUpon>OgrenciKaydi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrenciListele.resx">
+      <DependentUpon>OgrenciListele.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -85,13 +94,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Ayarlar.settings">
+    <None Include="HesapAyarlari.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Ayarlar.Designer.cs</LastGenOutput>
+      <LastGenOutput>HesapAyarlari.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Giris.settings">
+    <None Include="OgrenciAyarlari.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Giris.Designer.cs</LastGenOutput>
+      <LastGenOutput>OgrenciAyarlari.Designer.cs</LastGenOutput>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
