--- a/OgrenciKayit/App.config
+++ b/OgrenciKayit/App.config
@@ -33,4 +33,9 @@
             </setting>
         </OgrenciKayit.Hesap>
     </userSettings>
+  
+  <!-- veri tabanı bağlantı kısmı-->
+  <connectionStrings>
+    <add name="baglanti" connectionString="Server=LENOVO\SQLEXPRESS;Database=demoKayit;Trusted_Connection=True;" providerName="System.Data.Sql.Client" />   <!-- providerName="System.Data.Sql.Client" kütüphaneyi ekelemek için-->
+  </connectionStrings>
 </configuration>
